--- a/softwaremaintenece/src/frogStylesheet/game_stylesheet.css
+++ b/softwaremaintenece/src/frogStylesheet/game_stylesheet.css
@@ -1,18 +1,7 @@
-.group{
-	-fx-font-size:50px;
-}
-
-#menutext{
-	-fx-font-size:30px;
-	-fx-fill: white;
-	-fx-font-wight:bold;
-	
-}
-
 .button{
 	-fx-border-radius:8px;
 	-fx-border-width:3px;
-	-fx-border-color:#7CFC00;
+	-fx-border-color:#D82020;
 	-fx-background-color:transparent;
 	-fx-text-fill:white;
 	-fx-padding: 5px 25px 5px 25px;
@@ -21,12 +10,10 @@
 .button:hover{
 	-fx-border-radius:8px;
 	-fx-border-width:3px;	
-	-fx-border-color:#BA55D3;
+	-fx-border-color:#D82020;
 	-fx-background-color: transparent;
 	-fx-text-fill: #7CFC00;
 	-fx-rotate: 5;
 	
 	
 }
-
-
